--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ body {
 
 .stats-container {
     display: flex;
+    align-items: center;
 }
-
 .stats-card {
     background-color: #a8b0bc;
     border-radius: 7px;
@@ -30,6 +30,10 @@ body {
     margin: 1%;
     width: 100%;
     text-align: center;
+}
+.stats-card:hover {
+    cursor: pointer;
+    box-shadow: 0 0 30px lightblue; 
 }
 
 #num-contributions, #total-raised, #num-games {
