--- a/style.css
+++ b/style.css
@@ -31,10 +31,6 @@ body {
     width: 100%;
     text-align: center;
 }
-.stats-card:hover {
-    cursor: pointer;
-    box-shadow: 0 0 30px lightblue; 
-}
 
 #num-contributions, #total-raised, #num-games {
     font-size: 50px;
@@ -61,7 +57,7 @@ body {
     border-radius: 7px;
 }
 
-.game-card:hover {
+.game-card:hover, .stats-card:hover {
     cursor: pointer;
     box-shadow: 0 0 30px lightblue;
 }
