--- a/style.css
+++ b/style.css
@@ -73,3 +73,7 @@ button {
     margin: 1%;
     border-radius: 7px;
 }
+#button-container button:hover {
+    background-color: rgb(177, 177, 177);
+    cursor: pointer;
+}
